<resources>
    <string name="app_name">EuroBetonPlus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Заказ бетона с доставкой</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="beton">Бетон</string>
    <string name="dog">Договор</string>
    <string name="schet">Счет-фактура</string>
    <string name="sert">Сертификат</string>
    <string name="beton2">Раствор</string>
    <string name="pesok">Песок</string>
    <string name="grav">Гравий</string>
    <string name="contact">Контакты</string>
    <string name="onas">О нас</string>
    <string name="ocom">О компании</string>
    <string name="adress">Адрес доставки:</string>
    <string name="marka_betona">Марка бетона:</string>
    <string name="b_nasos">Бетононасос</string>
    <string name="button_selest_time">Выбрать время доставки</string>

    <string name="m100">M100</string>
    <string name="m150">M150</string>
    <string name="m200">M200</string>
    <string name="m250">M250</string>
    <string name="m300">M300</string>
    <string name="m350">M350</string>
    <string name="m400">M400</string>
    <string name="m500">M500</string>




    <string name="i_m_a_driver">Для Водтителей</string>
    <string name="i_m_a_customer">Для Заказчиков</string>
    <string name="todo">TODO</string>
    <string name="address">Адрес</string>
    <string name="name">Имя</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Повтор пароля</string>
    <string name="sign_up">Sign Up</string>
    <string name="tap_to_log_in">Tap To Log In</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="sign_out">Выход</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_passenger_maps">Map</string>
    <string name="bookTaxi">Заказать такси</string>
    <string name="title_activity_customer_maps">Map</string>
    <string name="anotherAddress">Ввести другой адрес</string>
</resources>
