<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/dog"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings2"
        android:orderInCategory="100"
        android:title="@string/schet"
        android:checked="true"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings3"
        android:orderInCategory="100"
        android:title="@string/sert"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never" />

</menu>