<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.eurobetonplus.CustomerMapsActivity"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
         android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="570dp" />

    <SearchView
        android:id="@+id/search"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="@string/anotherAddress"
        android:iconifiedByDefault="true"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:background="@drawable/bg_round"/>

    <LinearLayout
        android:layout_below="@id/map"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/m100"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/m100"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/m150"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/m150"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/m200"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/m200"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/m250"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/m250"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/m300"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/m300"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/m350"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/m350"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/m400"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/m400"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/m500"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/m500"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>

